force-app/main/default/objects/QuoteLineItem/fields/BP_Invoice_Total__c.field-meta.xml
<CustomField>
    <fullName>BP_Invoice_Total__c</fullName>
    <label>BP Invoice Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>