force-app/main/default/objects/QuoteLineItem/fields/BP_Number_Form__c.field-meta.xml
<CustomField>
    <fullName>BP_Number_Form__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id , BP_Number__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BP Number</label>
    <type>Text</type>
</CustomField>