force-app/main/default/objects/QuoteLineItem/fields/Expense_Outbound_Freight__c.field-meta.xml
<CustomField>
    <fullName>Expense_Outbound_Freight__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Expense Outbound/Freight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>