force-app/main/default/objects/QuoteLineItem/fields/Expenses_Inbound__c.field-meta.xml
<CustomField>
    <fullName>Expenses_Inbound__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Expenses Inbound</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>