force-app/main/default/objects/QuoteLineItem/fields/Fee_less_INS__c.field-meta.xml
<CustomField>
    <fullName>Fee_less_INS__c</fullName>
    <label>Fee less INS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>