force-app/main/default/objects/QuoteLineItem/fields/Initial_Quote_Converted__c.field-meta.xml
<CustomField>
    <fullName>Initial_Quote_Converted__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Converted to GBP</inlineHelpText>
    <label>Initial Quote - Converted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>