force-app/main/default/objects/QuoteLineItem/fields/Initial_Quote_Supplier_Currency__c.field-meta.xml
<CustomField>
    <fullName>Initial_Quote_Supplier_Currency__c</fullName>
    <label>Initial Quote - Supplier Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>