force-app/main/default/objects/QuoteLineItem/fields/Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Order_Value__c</fullName>
    <inlineHelpText>Supplier Currency</inlineHelpText>
    <label>Order Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>