force-app/main/default/objects/QuoteLineItem/fields/Order_Value_Converted__c.field-meta.xml
<CustomField>
    <fullName>Order_Value_Converted__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>GBP</inlineHelpText>
    <label>Order Value - Converted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>