force-app/main/default/objects/QuoteLineItem/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <label>Part Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>