force-app/main/default/objects/QuoteLineItem/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>